# ocs-feedback

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arduino-uno-crosscompile.cmake  doxygen.conf  template.CMakeLists.txt
EEPROM/: CMakeLists.txt
Ethernet/: CMakeLists.txt
GSM/: CMakeLists.txt
LiquidCrystal/: CMakeLists.txt
SD/: CMakeLists.txt
SPI/: CMakeLists.txt
Servo/: CMakeLists.txt
SoftwareSerial/: CMakeLists.txt
Stepper/: CMakeLists.txt
TFT/: CMakeLists.txt
WiFi/: CMakeLists.txt
WiFi/src/: WiFi.cpp  WiFiClient.cpp  WiFiServer.cpp  WiFiUdp.cpp
Wire/: CMakeLists.txt
blink/: CMakeLists.txt
blink/src/: blink-arduino.cpp  blink-avr.c
cmake/: arduino-crosscompile.cmake  boards_txt-reader.cmake
cmake/Modules/: defaultDocuTarget.cmake
include/: IPAddress.h  Print.h  SD.h  Stream.h  UIPClient.h  UIPEthernet.h  UIPUdp.h  WiFi.h  WiFiServer.h  amc7812.h  controller.h  error.h  feedback.h  feedback_conf.h  io.h  uip_debug.h  utility.h  wifi_drv.h
include/variants/standard/: amc7812conf.h
libarduinocore/: CMakeLists.txt
libarduinocore/src/: HardwareSerial.cpp  Stream.cpp
tools/: avrdude.mk  boards_txt-reader.cmake  common.mk  core.mk  master.mk  monitor.mk  paths.mk
